# seagall

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  requirements_new.txt  setup.py
Example/: MouseBrain_GEX.h5ad  TestSeagall.ipynb
Example/.ipynb_checkpoints/: TestSeagall-checkpoint.ipynb
Example/RawData/: MouseBrain_GEX.h5ad
Example/SEAGALL/: SEAGALL_mymodel_CellType.pth  SEAGALL_mymodel_CellType_GAT_Progress.json  SEAGALL_mymodel_CellType_HPO.db  SEAGALL_mymodel_CellType_HPO.json
reproducibility/: 0_CellRanger_and_PeakCalling.ipynb  1_B_HumanBrain_CellType_Annotation.ipynb  1_CelltypeAnnotation.ipynb  2_CountMatrices.ipynb  3_MatricesForAEsHPO.ipynb  4_AEs.ipynb  4_AEs_HPO.ipynb  5_GraphEmbedding.ipynb  6_Classification.ipynb  7_AEs.ipynb  8_XAI.ipynb  9_XAI_Metrics.ipynb  CellRangerATAC.sh  CellRangerArc.sh  CountMatrix.py  Dropout_Master.sh  Dropout_Slave.sh  HOMER.py  HPO.py  HPO_AE.py  HPO_TAE.py  HPO_TopoAE.py  HPO_VAE.py  ML_utils.py  MS.py  Models.py  PeakCalling.sh  README.md  Robustness.py  RobustnessMetric.py  RobustnessMetric_siVAE.py  Robustness_old.py  Run_CountMatrix.sh  Run_Exp.sh  Run_XAI.sh  SnapATAC2.py  Time.py  Utils.py  XAI.py  XAI_Runs.py  (+6 more)
reproducibility/.ipynb_checkpoints/: 0_CellRanger_and_PeakCalling-checkpoint.ipynb  4_AEs-checkpoint.ipynb  (+10 more)
seagall/: EmbeddExplain.py  HPO.py  ML_utils.py  Models.py  Utils.py  __init__.py  base_dataset.py  base_model.py  manifold_tools.py  procrustes.py  torch_modules.py
seagall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test.py
