[project]
name = "seagall"
version = "0.0.1"
authors = [{ name="gabbo3", email="gabriele.malagoli3@gmail.com"}]
description = "Graph learning for single-cell"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/gmalagol10/seagall.git"
Issues = "https://github.com/gmalagol10/seagall/issues"
